# django_tools

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
.github/workflows/: ci.yml
config/: config.json
docs/errors/: README.md
docs/settings/: README.md
examples/: __init__.py  celery_app.py  django_integration.py  explicacoes.py  kiwi_usage.py
examples/workflow/: README.md  __init__.py  workflow_usage.py
scripts/: PYRIGHT.md  README.md  workflow_dryrun.py
scripts/workflow/: __init__.py  cli.py  config.py  tui.py
scripts/workflow/commands/: __init__.py  check.py  push.py  tag.py  version.py
scripts/workflow/core/: __init__.py  models.py  runner.py
scripts/workflow/domain/: __init__.py  git_operations.py  project.py  validation.py  version.py
scripts/workflow/infrastructure/: __init__.py  command_executor.py  config_manager.py  file_system.py  git_client.py
scripts/workflow/presentation/: __init__.py  console.py  formatters.py  renderers.py  textual_app.py  textual_console.py  workflow.tcss
scripts/workflow/types/: __init__.py  config.py  enums.py  models.py
scripts/workflow/utils/: __init__.py  constants.py  git.py  timing.py
src/: app.py
src/django_tools/: __init__.py  models.py
src/django_tools/errors/: __init__.py  container.py  exceptions.py  mixins.py  types.py  utils.py
src/django_tools/errors/tests/: __init__.py  test_errors.py
src/django_tools/kiwi/: README.md  __init__.py  celery.py  containers.py
src/django_tools/migrations/: 0001_initial.py
src/django_tools/settings/: __init__.py  base.py  consts.py
src/django_tools/settings/base/: __init__.py  settings_django.py
src/django_tools/settings/base/infra/: __init__.py  settings_celery.py  settings_database.py  settings_rabbit.py  settings_redis.py
src/django_tools/settings/tests/: conftest.py  test_settings.py
src/django_tools/utils/: __init__.py  setup.py
tests/: __init__.py  test_workflow.py
tests/kiwi/: README.md  __init__.py  conftest.py  test_kiwi.py
